--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "last 2 versions",
     "not dead"
   ],
-  "description": "Vue.js wrapper for Box-shadow.css to build simple and awesome shadows with use vue.",
+  "description": "Vue.js wrapper for box-shadow.css to build simple and awesome shadows with use vue.",
   "main": "src/index.js",
   "author": "Andrej Sharapov",
   "license": "MIT",
