--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,4 @@ blank_issues_enabled: false
 contact_links:
   - name: Other issues
     url: https://github.com/andrejsharapov/vue-box-shadows/issues/new
-    about: Please use New issues for other issues and asking questions.
+    about: Please use New issues for other issues.
