--- a/.github/ISSUE_TEMPLATE/2_bug report.yaml
+++ b/.github/ISSUE_TEMPLATE/2_bug report.yaml
@@ -7,8 +7,8 @@ body:
   - type: markdown
     attributes:
       value: |
-        > **Warning**
-        > **Make sure you [searched all issues](https://github.com/andrejsharapov/vue-box-shadows/issues?q=is%3Aissue+label%3A%22Bug+report%22) before submitting your bug report!**
+> **Warning**
+> Make sure you [searched all issues](https://github.com/andrejsharapov/vue-box-shadows/issues?q=is%3Aissue+label%3A%22Bug+report%22) before submitting your bug report!
   # step 2
   - type: textarea
     id: about
