--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: false
 contact_links:
+  - name: Questions & Discussions
+    url: https://github.com/andrejsharapov/vue-box-shadows/discussions
+    about: Use GitHub discussions for message-board style questions and discussions.
   - name: Other issues
-    url: https://github.com/andrejsharapov/vue-box-shadows/issues/new
-    about: Please use New issues for other issues.
+    url: https://discord.com/invite/XtT4Hdf3
+    about: Ask questions and discuss with other users in real time.
