--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,6 +3,6 @@ contact_links:
   - name: Questions & Discussions
     url: https://github.com/andrejsharapov/vue-box-shadows/discussions
     about: Use GitHub discussions for message-board style questions and discussions.
-  - name: Other issues
+  - name: Discord channel
     url: https://discord.com/invite/XtT4Hdf3
     about: Ask questions and discuss with other users in real time.
