--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,12 @@ updates:
     schedule:
       interval: "weekly"
     ignore:
+      - dependency-name: "@vue/cli-plugin-babel"
+      - dependency-name: "@vue/cli-plugin-eslint"
+      - dependency-name: "@vue/cli-service"
+      - dependency-name: "babel-eslint"
+      - dependency-name: "core-js"
+      - dependency-name: "eslint"
+      - dependency-name: "eslint-plugin-vue"
       - dependency-name: "vue"
-      - dependency-name: "sass-loader"
-      
+      - dependency-name: "vue-template-compiler"
