--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "last 2 versions",
     "not dead"
   ],
-  "description": "Collection of CSS box-shadows for every taste contains more than 100 simple and beautiful shadows.",
+  "description": "Collection of CSS box-shadows for every taste contains more than 100 simple, beautiful and airy shadows.",
   "main": "src/index.js",
   "author": "Andrej Sharapov",
   "license": "MIT",
