--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "dependencies": {},
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~4.5.19",
@@ -48,8 +49,7 @@
   "keywords": [
     "vue",
     "css",
-    "box-shadow",
-    "frontend"
+    "box-shadow"
   ],
   "bugs": {
     "url": "https://github.com/andrejsharapov/vue-box-shadows/issues"
