--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "core-js": "^3.23.5",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
     "vue": "^2.7.7",
     "vue-template-compiler": "^2.7.7"
   },
