--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 node_modules
 /dist
 *.lock
+package-lock.json
 
 # local env files
 .env.local
@@ -21,3 +22,7 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+# Build
+dist/*
+!dist/**/app.*
