--- a/package.json
+++ b/package.json
@@ -2,10 +2,27 @@
   "name": "vue-box-shadows",
   "version": "2.0.1",
   "private": false,
+  "description": "Collection of CSS box-shadows for every taste contains more than 100 simple, beautiful and airy shadows.",
+  "main": "index.js",
+  "author": "Andrej Sharapov",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andrejsharapov/vue-box-shadows.git"
+  },
+  "homepage": "https://github.com/andrejsharapov/vue-box-shadows#readme",
+  "bugs": {
+    "url": "https://github.com/andrejsharapov/vue-box-shadows/issues",
+    "keywords": [
+      "vue",
+      "css",
+      "box-shadow"
+    ]
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.8",
@@ -38,22 +55,5 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ],
-  "description": "Collection of CSS box-shadows for every taste contains more than 100 simple, beautiful and airy shadows.",
-  "main": "src/index.js",
-  "author": "Andrej Sharapov",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/andrejsharapov/vue-box-shadows.git"
-  },
-  "keywords": [
-    "vue",
-    "css",
-    "box-shadow"
-  ],
-  "bugs": {
-    "url": "https://github.com/andrejsharapov/vue-box-shadows/issues"
-  },
-  "homepage": "https://github.com/andrejsharapov/vue-box-shadows#readme"
+  ]
 }
